# mbot_simulation_environments

./: CMakeLists.txt  README.md  package.xml  repository.debs
doc/: README.md
launch/: load_environment_example.launch
models/isr-empty-testbed/: README.md  database.config
models/isr-empty-testbed/bathroom/: bathroom.sdf  model.config
models/isr-empty-testbed/bedroom/: bedroom.sdf  model.config
models/isr-empty-testbed/floor/: floor.sdf  model.config
models/isr-empty-testbed/inside_hallway/: inside_hallway.sdf  model.config
models/isr-empty-testbed/outside_hallway/: model.config  outside_hallway.sdf
models/isr-empty-testbed/outside_wall/: model.config  outside_wall.sdf
models/isr-empty-testbed/patio/: model.config  patio.sdf
models/isr-testbed/apple_juice_box/: apple_juice_box.sdf
models/isr-testbed/aruco_marker_0/: model.sdf
models/isr-testbed/basmati_rice/: basmati_rice.sdf
models/isr-testbed/bed/: model.sdf
models/isr-testbed/bedroom_nightstand/: model.sdf
models/isr-testbed/beer/: model-1_4.sdf  model.sdf
models/isr-testbed/cabinet_diamondback/: cabinet_diamondback.sdf
models/isr-testbed/cabinet_ikea_galant/: cabinet_ikea_galant.sdf
models/isr-testbed/cafe_table/: model.sdf
models/isr-testbed/coke_can/: model-1_2.sdf
models/isr-testbed/dinning_room_table/: model.sdf
models/isr-testbed/dinning_room_table_blender/: model.sdf
models/isr-testbed/floor/: floor.sdf
models/isr-testbed/living_room_table/: model.sdf
worlds/: empty.world  isr-empty-testbed.world  isr-testbed-TBM3.world  isr-testbed.world  mbot_grasping.world
(+41 files in other folders)
